test/kubernetes/e2e/features/directresponse/testdata/basic-delegation-direct-response.yaml
---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gateway
spec:
  hostnames:
  - "www.example.com"
  parentRefs:
  - name: gw
    namespace: default
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: "*"
      namespace: "httpbin"
      kind: HTTPRoute
      group: gateway.networking.k8s.io

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin
  namespace: httpbin
  labels:
    app: httpbin
spec:
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: httpbin
      port: 8000
  - matches:
    - path:
        type: Exact
        value: /ip
    filters:
    - type: ExtensionRef
      extensionRef:
        name: ip
        group: gateway.gloo.solo.io
        kind: DirectResponseRoute

---

apiVersion: gateway.gloo.solo.io/v1alpha1
kind: DirectResponseRoute
metadata:
  name: ip
  namespace: httpbin
spec:
  status: 404
  body: "/ip is not supported"
