test/kubernetes/e2e/features/directresponse/testdata/invalid-multiple-route-actions.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin
  namespace: httpbin
  labels:
    app: httpbin
spec:
  hostnames:
  - "www.example.com"
  parentRefs:
  - name: gw
    namespace: default
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        statusCode: 301
        port: 80
    - type: ExtensionRef
      extensionRef:
        name: test-1
        group: gateway.gloo.solo.io
        kind: DirectResponseRoute
---
apiVersion: gateway.gloo.solo.io/v1alpha1
kind: DirectResponseRoute
metadata:
  name: test-1
  namespace: httpbin
spec:
  status: 403
