test/kubernetes/e2e/features/directresponse/testdata/overlaping-filters.yaml
---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin
  namespace: httpbin
  labels:
    app: httpbin
spec:
  hostnames:
  - "www.example.com"
  parentRefs:
  - name: gw
    namespace: default
  rules:
  - matches:
    - path:
        type: Exact
        value: /test/1
    filters:
    - type: ExtensionRef
      extensionRef:
        name: test-1
        group: gateway.gloo.solo.io
        kind: DirectResponseRoute
  - matches:
    - path:
        type: Exact
        value: /test/2
    backendRefs:
    - name: httpbin
      port: 8000
      filters:
      - type: ExtensionRef
        extensionRef:
          name: test-2
          group: gateway.gloo.solo.io
          kind: DirectResponseRoute

---

apiVersion: gateway.gloo.solo.io/v1alpha1
kind: DirectResponseRoute
metadata:
  name: test-1
  namespace: httpbin
spec:
  status: 301
  body: "Test 1 body"

---

apiVersion: gateway.gloo.solo.io/v1alpha1
kind: DirectResponseRoute
metadata:
  name: test-2
  namespace: httpbin
spec:
  status: 302
  body: "Test 2 body"
